src/test/julian/Parsing/SyntaxError/prog_6.jul
/* $PRAGMA$ info.julang.ide.no.parsing */
int x;

class C {

}

x = 5;
Console.println(x);